[package]
name = "pyrin-consensus"
description = "Pyrin consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-core.workspace = true
pyrin-database.workspace = true
pyrin-hashes.workspace = true
pyrin-math.workspace = true
pyrin-merkle.workspace = true
pyrin-muhash.workspace = true
pyrin-notify.workspace = true
pyrin-pow.workspace = true
pyrin-txscript.workspace = true
pyrin-utils.workspace = true
pyrin-addresses.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true


rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
pyrin-txscript-errors.workspace = true

[[bench]]
name = "hash_benchmarks"
harness = false

[features]
html_reports = []
devnet-prealloc = ["pyrin-consensus-core/devnet-prealloc"]
