[package]
name = "pyrin-mining"
description = "Pyrin mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-addresses.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-core.workspace = true
pyrin-hashes.workspace = true
pyrin-mining-errors.workspace = true
pyrin-muhash.workspace = true
pyrin-txscript.workspace = true
pyrin-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }

[dev-dependencies]
pyrin-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false
