[package]
name = "pyrin"
description = "Pyrin full node daemon"
keywords = ["pyrin", "pyrin", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "pyrind_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
pyrin-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

pyrin-addresses.workspace = true
pyrin-addressmanager.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-consensus.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-core.workspace = true
pyrin-database.workspace = true
pyrin-grpc-server.workspace = true
pyrin-hashes.workspace = true
pyrin-index-processor.workspace = true
pyrin-mining.workspace = true
pyrin-notify.workspace = true
pyrin-p2p-flows.workspace = true
pyrin-perf-monitor.workspace = true
pyrin-rpc-core.workspace = true
pyrin-rpc-service.workspace = true
pyrin-txscript.workspace = true
pyrin-utils.workspace = true
pyrin-utils-tower.workspace = true
pyrin-utxoindex.workspace = true
pyrin-wrpc-server.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
serde.workspace = true
dirs.workspace = true
futures-util.workspace = true
futures.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "pyrin-alloc/heap"]
devnet-prealloc = ["pyrin-consensus/devnet-prealloc"]
