[package]
name = "rothschild"
description = "Pyrin Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-addresses.workspace = true
pyrin-consensus-core.workspace = true
pyrin-core.workspace = true
pyrin-grpc-client.workspace = true
pyrin-notify.workspace = true
pyrin-rpc-core.workspace = true
pyrin-txscript.workspace = true
pyrin-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
