[package]
name = "simpa"
description = "Pyrin Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first 
pyrin-consensus-core.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-consensus.workspace = true
pyrin-core.workspace = true
pyrin-database.workspace = true
pyrin-hashes.workspace = true
pyrin-perf-monitor.workspace = true
pyrin-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "pyrin-alloc/heap"]
