[package]
name = "pyrin-wasm"
description = "PYRIN WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
pyrin-addresses.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-wasm.workspace = true
pyrin-core.workspace = true
pyrin-math.workspace = true
pyrin-pow.workspace = true
pyrin-rpc-core.workspace = true
pyrin-utils.workspace = true
pyrin-wasm-core.workspace = true
pyrin-wallet-core.workspace = true
pyrin-wallet-keys.workspace = true
pyrin-wrpc-client.workspace = true
pyrin-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features] 
wasm32-sdk = [
    "pyrin-wallet-core/wasm32-sdk",
    "pyrin-pow/wasm32-sdk",
]
wasm32-core = [
    "pyrin-wallet-core/wasm32-core",
    "pyrin-pow/wasm32-sdk",
]
wasm32-rpc = [
    "pyrin-consensus-core/wasm32-sdk",
    "pyrin-consensus-wasm/wasm32-sdk",
    "pyrin-wrpc-client/wasm32-sdk",
    "pyrin-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/pyrin" },
    { target = "web", out-dir = "web/pyrin" }
]
folder = "setup"
