[package]
name = "pyrin-consensus-core"
description = "Pyrin consensus core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
devnet-prealloc = []
wasm32-sdk = []
default = []

[dependencies]
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
getrandom.workspace = true
itertools.workspace = true
js-sys.workspace = true
pyrin-addresses.workspace = true
pyrin-core.workspace = true
pyrin-hashes.workspace = true
pyrin-math.workspace = true
pyrin-merkle.workspace = true
pyrin-muhash.workspace = true
pyrin-txscript-errors.workspace = true
pyrin-utils.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pyo3.workspace = true

[dev-dependencies]
criterion.workspace = true
bincode.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true

[[bench]]
name = "serde_benchmark"
harness = false

[lints.clippy]
empty_docs = "allow"
