[package]
name = "pyrin-consensus-notify"
description = "Pyrin consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
pyrin-consensus-core.workspace = true
pyrin-core.workspace = true
pyrin-hashes.workspace = true
pyrin-notify.workspace = true
pyrin-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
