[package]
name = "pyrin-pow"
description = "Pyrin proof-of-work"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []

[dependencies]
js-sys.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-client.workspace = true
pyrin-hashes.workspace = true
pyrin-math.workspace = true
pyrin-utils.workspace = true
wasm-bindgen.workspace = true
workflow-wasm.workspace = true
num.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false