[package]
name = "pyrin-consensus-wasm"
description = "Pyrin consensus core WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = []
wasm32-types = []

[dependencies]
pyrin-consensus-core.workspace = true
pyrin-consensus-client.workspace = true
pyrin-addresses.workspace = true
pyrin-txscript.workspace = true
pyrin-hashes.workspace = true
pyrin-utils.workspace = true

cfg-if.workspace = true
faster-hex.workspace = true
js-sys.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

workflow-wasm.workspace = true
workflow-log.workspace = true

[lints.clippy]
empty_docs = "allow"
