[package]
name = "pyrin-merkle"
description = "Pyrin merkle tree library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-hashes.workspace = true
