[package]
name = "pyrin-index-processor"
description = "Pyrin index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-consensus-core.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-core.workspace = true
pyrin-database.workspace = true
pyrin-hashes.workspace = true
pyrin-index-core.workspace = true
pyrin-notify.workspace = true
pyrin-utils.workspace = true
pyrin-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
pyrin-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}