[package]
name = "pyrin-utxoindex"
description = "Pyrin UTXO index"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-core.workspace = true
pyrin-database.workspace = true
pyrin-hashes.workspace = true
pyrin-index-core.workspace = true
pyrin-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rocksdb.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
pyrin-consensus.workspace = true
rand = { workspace = true, features = ["small_rng"] }
