[package]
name = "pyrin-perf-monitor"
description = "Pyrin process performance monitoring tools"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true

[dependencies]
pyrin-core.workspace = true
log.workspace = true
portable-atomic.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
workflow-perf-monitor.workspace = true
