[package]
name = "pyrin-p2p-flows"
description = "Pyrin p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-core.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-p2p-lib.workspace = true
pyrin-utils.workspace = true
pyrin-utils-tower.workspace = true
pyrin-hashes.workspace = true
pyrin-muhash.workspace = true
pyrin-connectionmanager.workspace = true
pyrin-addressmanager.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-mining.workspace = true
pyrin-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true
