[package]
name = "pyrin-rpc-core"
description = "Pyrin RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "pyrin-consensus-client/wasm32-sdk",
    "pyrin-consensus-wasm/wasm32-sdk"
]

[dependencies]
pyrin-addresses.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-client.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-consensus-wasm.workspace = true
pyrin-core.workspace = true
pyrin-hashes.workspace = true
pyrin-index-core.workspace = true
pyrin-math.workspace = true
pyrin-mining-errors.workspace = true
pyrin-notify.workspace = true
pyrin-txscript.workspace = true
pyrin-utils.workspace = true
pyrin-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pyo3.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints.clippy]
empty_docs = "allow"
