[package]
name = "pyrin-rpc-service"
description = "Pyrin RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-addresses.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-core.workspace = true
pyrin-hashes.workspace = true
pyrin-index-core.workspace = true
pyrin-math.workspace = true
pyrin-mining.workspace = true
pyrin-notify.workspace = true
pyrin-p2p-flows.workspace = true
pyrin-p2p-lib.workspace = true
pyrin-perf-monitor.workspace = true
pyrin-rpc-core.workspace = true
pyrin-txscript.workspace = true
pyrin-utils.workspace = true
pyrin-utils-tower.workspace = true
pyrin-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true
