[package]
name = "pyrin-sdk"
version = "0.1.9"
edition = "2021"

[lib]
name = "pyrin"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = "1.9"
pyrin-bip32.workspace = true
pyrin-wallet-core.workspace = true
pyrin-addresses.workspace = true
pyrin-consensus-core.workspace = true
pyrin-rpc-core.workspace = true
pyrin-notify.workspace = true
pyrin-muhash.workspace = true
workflow-core.workspace = true
futures.workspace = true