[package]
name = "pyrin-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

pyrin-addresses.workspace = true
pyrin-bip32.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-notify.workspace = true
pyrin-consensus.workspace = true
pyrin-consensusmanager.workspace = true
pyrin-core.workspace = true
pyrin-database.workspace = true
pyrin-grpc-client.workspace = true
pyrin-grpc-core.workspace = true
pyrin-grpc-server.workspace = true
pyrin-hashes.workspace = true
pyrin-index-processor.workspace = true
pyrin-math.workspace = true
pyrin-merkle.workspace = true
pyrin-muhash.workspace = true
pyrin-notify.workspace = true
pyrin-pow.workspace = true
pyrin-rpc-core.workspace = true
pyrin-rpc-service.workspace = true
pyrin-txscript.workspace = true
pyrin-utils.workspace = true
pyrin-utxoindex.workspace = true
pyrin-wrpc-server.workspace = true
pyrin.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
pyrin-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["pyrin/devnet-prealloc"]
