[package]
name = "pyrin-grpc-client"
description = "Pyrin gRPC client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyrin-core.workspace = true
pyrin-grpc-core.workspace = true
pyrin-notify.workspace = true
pyrin-rpc-core.workspace = true
pyrin-utils.workspace = true
pyrin-utils-tower.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
futures-util.workspace = true

[features]
heap = []
