[package]
name = "pyrin-wrpc-proxy"
description = "Pyrin wRPC to gRPC proxy"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
pyrin-consensus-core.workspace = true
pyrin-grpc-client.workspace = true
pyrin-rpc-core.workspace = true
pyrin-rpc-macros.workspace = true
pyrin-wrpc-server.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true

[package.metadata.emanate.build]
folder = "setup"
