[package]
name = "pyrin-wrpc-wasm"
description = "Pyrin wRPC WASM client"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = ["pyrin-wrpc-client/wasm32-sdk"]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ahash.workspace = true
async-std.workspace = true
cfg-if.workspace = true
pyrin-addresses.workspace = true
pyrin-consensus-core.workspace = true
pyrin-consensus-client.workspace = true
pyrin-consensus-wasm.workspace = true
pyrin-notify.workspace = true
pyrin-wrpc-client.workspace = true
pyrin-rpc-core.workspace = true
pyrin-rpc-macros.workspace = true
pyrin-wasm-core.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-wasm.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
workflow-core.workspace = true
futures.workspace = true

[lints.clippy]
empty_docs = "allow"
