[package]
name = "pyrin-wrpc-example-subscriber"
description = "Pyrin wRPC subscription example"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
pyrin-consensus-core.workspace = true
pyrin-rpc-core.workspace = true
pyrin-wrpc-client.workspace = true
pyrin-notify.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
ctrlc.workspace = true
